# Generated by Django 5.2.5 on 2025-11-24 18:18

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0004_trilhacurso_area_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='ProgressoTrilhaCurso',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('modulo_indice', models.IntegerField(help_text='Índice do módulo')),
                ('aula_indice', models.IntegerField(help_text='Índice da aula dentro do módulo')),
                ('identificador', models.CharField(help_text='Identificador único da atividade', max_length=500)),
                ('concluida', models.BooleanField(default=False)),
                ('data_conclusao', models.DateTimeField(blank=True, null=True)),
                ('trilha', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='progresso', to='api.trilhacurso')),
            ],
            options={
                'verbose_name': 'Progresso de Trilha',
                'verbose_name_plural': 'Progresso de Trilhas',
                'ordering': ['modulo_indice', 'aula_indice'],
                'unique_together': {('trilha', 'identificador')},
            },
        ),
    ]
